# Deep-Research-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
deep_research_agent/: __init__.py  __main__.py  api.py  cli.py  config.py  exporter.py  llm.py  models.py  search.py  structured_output.py  workflow.py
docs/: DELIVERY.md
examples/: sample_report.md
tests/: test_api.py  test_cli.py  test_frontend.py  test_llm.py  test_readme.py  test_structured_output.py  test_workflow.py
web/: app.js  index.html  styles.css
